<resources>
    <string name="app_name">Assignment2</string>
    <string name="title">Body Mass Index</string>
    <string name="title2">STATUS</string>
    <string name="weight">Weight (KG)</string>
    <string name="height">Height (CM)</string>
    <string name="hint">0</string>
    <string name="bmi">BMI</string>
    <string name="show_bmi">-</string>
    <string name="status">Weight Status</string>
    <string name="show_status">-</string>
    <string name="calculate">CALCULATE</string>
    <string name="ws1">Underweight</string>
    <string name="ws2">Normal</string>
    <string name="ws3">Overweight</string>
    <string name="ws4">Obese</string>
    <string name="ws5">Extremly Obese</string>
    <string name="error">ERROR</string>
    <string name="err_title">Warning</string>
    <string name="input_weight">Please enter weight.</string>
    <string name="input_height">Please enter height.</string>
    <string name="input_BMI">Cannot calculate BMI.</string>
    <string name="input_Status">Cannot calculate Status.</string>
    <string name="submit_title">Success</string>
    <string name="submit_result">Your data has been saved.</string>
    <string name="view_record">History</string>
    <string name="col_id">ID</string>
    <string name="col_date">Date</string>
    <string name="col_weight">Weight</string>
    <string name="col_height">Height</string>
    <string name="col_bmi">BMI</string>
    <string name="col_status">Status</string>
    <string name="hdtxt">History</string>
    <string name="title_activity_list">ListActivity</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
</resources>