<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <TextView
        android:id="@+id/col_id"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="2dp"
        android:layout_weight="0.7"
        android:text="@string/col_id" />

    <TextView
        android:id="@+id/col_date"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="2.2"
        android:text="@string/col_date" />

    <TextView
        android:id="@+id/col_weight"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1.3"
        android:text="@string/col_weight" />

    <TextView
        android:id="@+id/col_height"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1.3"
        android:text="@string/col_height" />

    <TextView
        android:id="@+id/col_bmi"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/col_bmi" />

    <TextView
        android:id="@+id/col_status"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="3"
        android:paddingStart="5dp"
        android:text="@string/col_status" />
</LinearLayout>