<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ListActivity" >
    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/hdtxt"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/col_id"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="2dp"
            android:layout_weight="0.7"
            android:text="@string/col_id" />

        <TextView
            android:id="@+id/col_date"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2.2"
            android:text="@string/col_date" />

        <TextView
            android:id="@+id/col_weight"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.3"
            android:text="@string/col_weight" />

        <TextView
            android:id="@+id/col_height"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.3"
            android:text="@string/col_height" />

        <TextView
            android:id="@+id/col_bmi"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/col_bmi" />

        <TextView
            android:id="@+id/col_status"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:paddingStart="5dp"
            android:text="@string/col_status"
            tools:ignore="RtlSymmetry" />
    </LinearLayout>

    <View
        android:layout_height="1dip"
        android:background="#CCCCCC"
        android:layout_width="match_parent"
        android:layout_marginTop="10dp" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <ListView
            android:id="@+id/listView"
            android:layout_width="match_parent"
            android:layout_height="658dp"
            tools:ignore="VisualLintBounds"></ListView>
    </LinearLayout>

</LinearLayout>