<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/innershadow"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/top"
        android:orientation="vertical">

        <TextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingTop="20dp"
            android:text="@string/title"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textColor="@color/orange"
            android:textSize="34sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="horizontal"
            android:paddingStart="30dp"
            android:paddingTop="20dp"
            android:paddingEnd="30dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/weight"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:paddingTop="5dp"
                    android:text="@string/weight"
                    android:textAlignment="textStart"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    tools:ignore="RtlCompat,RtlSymmetry" />

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <TextView
                    android:id="@+id/height"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:includeFontPadding="true"
                    android:paddingTop="5dp"
                    android:text="@string/height"
                    android:textAlignment="textStart"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    tools:ignore="RtlCompat,RtlSymmetry" />

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <TextView
                    android:id="@+id/bmi"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:paddingTop="6dp"
                    android:text="@string/bmi"
                    android:textAlignment="textStart"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    tools:ignore="RtlCompat,RtlSymmetry" />

                <TextView
                    android:id="@+id/textView6"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <TextView
                    android:id="@+id/status"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:paddingTop="6dp"
                    android:paddingEnd="15dp"
                    android:text="@string/status"
                    android:textAlignment="textStart"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    tools:ignore="RtlCompat,RtlSymmetry" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minWidth="30dp"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/editText1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/input_box"
                    android:ems="5"
                    android:hint="@string/hint"
                    android:importantForAutofill="no"
                    android:inputType="numberDecimal"
                    android:padding="3dp"
                    android:paddingEnd="5dp"
                    android:textAlignment="textEnd"
                    android:textColor="@color/white"
                    android:textColorHint="@color/hint"
                    android:textSize="20sp"
                    tools:ignore="DuplicateSpeakableTextCheck,LabelFor,RtlSymmetry,SpeakableTextPresentCheck,TextContrastCheck,TouchTargetSizeCheck,VisualLintTextFieldSize" />

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <EditText
                    android:id="@+id/editText2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/input_box"
                    android:ems="5"
                    android:hint="@string/hint"
                    android:importantForAutofill="no"
                    android:inputType="numberDecimal"
                    android:padding="3dp"
                    android:paddingEnd="5dp"
                    android:textAlignment="textEnd"
                    android:textColor="@color/white"
                    android:textColorHint="@color/hint"
                    android:textSize="20sp"
                    tools:ignore="LabelFor,RtlSymmetry,SpeakableTextPresentCheck,TextContrastCheck,TouchTargetSizeCheck,VisualLintTextFieldSize" />

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <TextView
                    android:id="@+id/show_bmi"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/input_box"
                    android:padding="3dp"
                    android:text="@string/show_bmi"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    tools:ignore="RtlSymmetry" />

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <TextView
                    android:id="@+id/show_status"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/input_box"
                    android:padding="3dp"
                    android:text="@string/show_status"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    tools:ignore="RtlSymmetry" />
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="20dp"
            android:paddingBottom="20dp">

            <View
                android:id="@+id/view"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:layout_weight="1" />

            <Button
                android:id="@+id/button"
                style="@style/Widget.AppCompat.Button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:background="@drawable/round"
                android:text="@string/calculate"
                android:textSize="20sp"
                tools:ignore="VisualLintButtonSize" />

            <View
                android:id="@+id/view2"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_weight="1" />

        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/innershadow"
        android:orientation="vertical"
        tools:ignore="UseCompoundDrawables">

        <TextView
            android:id="@+id/title2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingTop="10dp"
            android:text="@string/title2"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textColor="@color/orange"
            android:textSize="34sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:importantForAccessibility="no"
            android:paddingTop="10dp"
            android:paddingBottom="30dp"
            tools:ignore="ImageContrastCheck"
            tools:srcCompat="@drawable/ws0" />
    </LinearLayout>

</LinearLayout>